basic setup of the project

--- a/src/app/recipes/recipes-details/recipes-details.component.html
+++ b/src/app/recipes/recipes-details/recipes-details.component.html
@@ -1,3 +1,19 @@
-<p>
-  recipes-details works!
-</p>
+<h1>Recipe Name</h1>
+<div fxLayout="row" fxLayoutGap="15px">
+  <button>Add Ingredients</button>
+  <button>Edit</button>
+  <button>Add</button>
+</div>
+
+<div>
+  <h2>Description</h2>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique,
+    officiis quis. Labore, ullam quos magnam voluptatibus voluptatem vel
+    praesentium odio incidunt ipsum reiciendis obcaecati soluta ex, nihil nam.
+    Reiciendis, corporis!
+  </p>
+</div>
+<div>
+  <h3>Ingredients</h3>
+</div>
