--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,3 +1,17 @@
-<p>
-  shopping-edit works!
-</p>
+<div style="padding:10px;">
+  <form action="">
+    <div fxLayout="row" fxLayoutGap="15px">
+      <label for="">Name</label>
+      <input type="text" />
+
+      <label for="">Amount</label>
+      <input type="text" />
+    </div>
+
+    <div class="action-btns" fxLayout="row" fxLayoutGap="15px">
+      <button>Add</button>
+      <button>Delete</button>
+      <button>Clear</button>
+    </div>
+  </form>
+</div>
