--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,6 @@
 <app-shopping-edit></app-shopping-edit>
+<ul *ngFor="let ingredient of ingredients" class="lists">
+  <li>
+    <a href="#">{{ ingredient.name }} ({{ ingredient.amount }})</a>
+  </li>
+</ul>
