--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
   </div>
   <nav>
     <ul fxLayout="row" fxLayoutGap="15px">
-      <li><a href="#">Recipes</a></li>
-      <li><a href="#">Shopping List</a></li>
+      <li><a href="#" (click)="openRecipes(1)">Recipes</a></li>
+      <li><a href="#" (click)="openShoppingList(2)">Shopping List</a></li>
     </ul>
   </nav>
 </header>
