--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,17 +1,4 @@
-<div
-  class="recipe-lists"
-  fxLayout="row"
-  fxLayoutGap="25px"
-  fxLayoutAlign="start center"
+<app-recipe-item
   *ngFor="let recipes of recipe"
->
-  <!-- for image we can also use property binding [src]={{recipes.imagePath}} -->
-
-  <img src="{{ recipes.imagePath }}" alt="recipes.name" srcset="" />
-  <div>
-    <h2>Recipe Name:{{ recipes.name }}</h2>
-    <p>Description:{{ recipes.description }}</p>
-  </div>
-</div>
-
-<app-recipe-item></app-recipe-item>
+  [recipeItem]="recipes"
+></app-recipe-item>
