--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,4 +1,5 @@
 <app-recipe-item
   *ngFor="let recipes of recipe"
   [recipeItem]="recipes"
+  (recipeDetailView)="showMeDetails(recipes)"
 ></app-recipe-item>
