--- a/src/styles.scss
+++ b/src/styles.scss
@@ -367,8 +367,8 @@ a {
   text-decoration: none;
 }
 
-.lists {
-  li {
+ul {
+  li.lists {
     border-bottom: 1px solid #ccc;
     padding: 10px;
   }
