--- a/src/app/recipes/recipes-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipes-list/recipe-item/recipe-item.component.html
@@ -1,15 +1,12 @@
-<div
-  class="recipe-lists"
-  fxLayout="row"
-  fxLayoutGap="15px"
-  fxLayoutAlign="start center"
->
+<div class="recipe-lists" fxLayout="row" fxLayoutAlign="start center">
   <!-- for image we can also use property binding [src]={{recipes.imagePath}} -->
 
   <img src="{{ recipeItem.imagePath }}" alt="recipeItem.name" srcset="" />
   <div fxFlex="1 1 0" class="recipe-lists-content">
     <h2>Recipe Name:{{ recipeItem.name }}</h2>
     <p>Description:{{ recipeItem.description }}</p>
-    <button (click)="onDetails()">View Details</button>
+    <button mat-raised-button color="accent" (click)="onDetails()">
+      View Details
+    </button>
   </div>
 </div>
