--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 /* Document
    ========================================================================== */
 
@@ -356,6 +358,15 @@ template {
   display: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -363,6 +374,7 @@ ul {
     list-style: none;
   }
 }
+
 a {
   text-decoration: none;
 }
