--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,9 +4,8 @@ header {
     color: #000;
     padding: 15px;
   }
-  background: #ccc;
-  padding: 5px 10px;
+
   a {
-    color: #000;
+    color: #fff;
   }
 }
