--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -6,11 +6,9 @@
   fxLayout.xs="column"
 >
   <div fxFlex="4 1 0">
-    <app-recipes-list
-      (selectedRecipes)="showDetails($event)"
-    ></app-recipes-list>
+    <app-recipes-list></app-recipes-list>
   </div>
-  <div fxFlex="8 1 0">
+  <div fxFlex="8 1 0" style="padding:10px 0">
     <app-recipes-details
       *ngIf="detailStorage; else noContent"
       [fromRecipes]="detailStorage"
